syntax = "proto3";

package auth;

option java_package = "com.bolezni.battlecode_course_service_api.grpc";
option java_multiple_files = true;

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
  rpc GetUserFromToken (TokenRequest) returns (UserResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string username = 2;
  repeated string roles = 3;
  string user_id = 5;
  string error = 4;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
  string avatar_url = 5;
  string bio = 6;
  bool is_verified = 7;
  string error = 8;
}